test/data/resolver/valid/parameter_two_property_uses_agree.cypher
MATCH (p:Person), (q:Person) WHERE p.age = $threshold AND q.age = $threshold RETURN p.name
