test/data/resolver/invalid/parameter_type_conflict_property_vs_expr_bool.cypher
MATCH (p:Person) WHERE p.age = $x AND $x RETURN p.name
